--- a/GSE31210.Rmd
+++ b/GSE31210.Rmd
@@ -107,20 +107,21 @@ GSE31210.data = as_tibble(gset@phenoData@data) %>%
 GSE31210.data$`age (years):ch1` = coalesce(GSE31210.data$`age (years):ch1`, GSE31210.data$`age:ch1`)
 GSE31210.data$`OS_MONTHS` <- round(as.numeric(GSE31210.data$`days before death/censor:ch1`) / 30.44, 2)
 GSE31210.data$Histology <- "Adenocarcinoma"
-GSE31210.data = GSE31210.data[, c(1, 7, 9, 12, 15, 18, 20, 21)]
+GSE31210.data = GSE31210.data[, c(1, 7, 8, 9, 12, 15, 18, 20, 21)]
 
 # Next, we want to append clinical information onto gene expression data
-colnames(GSE31210.data) = c("Age", "OS_STATUS", "Sex", "RFS_MONTHS","Stage", "Smoked?", "OS_MONTHS", "Histology")
+colnames(GSE31210.data) = c("Age", "OS_STATUS", "Adjuvant Chemo", "Sex", "RFS_MONTHS","Stage", "Smoked?", "OS_MONTHS", "Histology")
 
 unique(GSE31210.data$Stage)
 GSE31210.data$OS_STATUS <- ifelse(GSE31210.data$OS_STATUS == "dead", 1, 0)
 GSE31210.data$Age = as.numeric(GSE31210.data$Age)
 GSE31210.data$IS_MALE <- ifelse(GSE31210.data$Sex == "male", 1, 0)
 GSE31210.data$`Smoked?` <- ifelse(GSE31210.data$`Smoked?` == "Never-smoker", "No", "Yes")
-GSE31210.data$"Adjuvant Chemo" = 0
 GSE31210.data$Race = "Unknown"
 GSE31210.data$RFS_MONTHS <- sapply(strsplit(as.character(GSE31210.data$RFS_MONTHS), ";"), function(x) round(as.numeric(x[1]), 2))
 GSE31210.data$Sex = NULL
+GSE31210.data$`Adjuvant Chemo`[GSE31210.data$`Adjuvant Chemo` == "none"] <- 0
+
 
 
 # fetch feature data to get gene symbols
@@ -138,10 +139,15 @@ write.csv(GSE31210.data,
 ```{r}
 #Merge clinical data and expression data
 GSE31210merged = cbind(GSE31210.data, GSE31210.expr)
-GSE31210merged <- subset(GSE31210merged, !is.na(OS_STATUS))
-GSE31210.data = subset(GSE31210.data, !is.na(OS_STATUS))
+GSE31210merged <- subset(GSE31210merged,
+                        !is.na(OS_STATUS) & `Adjuvant Chemo` != "exclude")
+GSE31210.data <- subset(GSE31210.data,
+                        !is.na(OS_STATUS) & `Adjuvant Chemo` != "exclude")
+GSE31210.data$`Adjuvant Chemo` = as.numeric(GSE31210.data$`Adjuvant Chemo`)
+GSE31210.merged$`Adjuvant Chemo` = as.numeric(GSE31210.merged$`Adjuvant Chemo`)
 write.csv(GSE31210merged, 
           "GSE31210merged.csv")
+GSE31210.expr = GSE31210merged[, -c(1:10)]
 GSE31210.data = GSE31210merged[, c(1:10)]
 ```
 
