--- a/affymetrix.Rmd
+++ b/affymetrix.Rmd
@@ -879,5 +879,163 @@ ggplot(umap_after_df, aes(x = UMAP1, y = UMAP2, shape = Batch)) +
   scale_shape_manual(values = 0:8)
 ```
 
+#Before plots
+```{r}
+install.packages("ggrepel")  # only once
+library(ggrepel)
 
+library(dplyr)
+
+pca_df$Platform <- ifelse(pca_df$Batch %in% c("GSE14814", "GSE68465"), "GPL96", "GPL570")
+
+label_df <- pca_df %>%
+  group_by(Batch) %>%
+  summarize(PC1 = median(PC1), PC2 = median(PC2), .groups = "drop")
+
+# Plot with centered, regular text labels
+ggplot(pca_df, aes(x = PC1, y = PC2)) +
+  geom_point(aes(color = Batch), alpha = 0.8, size = 2, show.legend = FALSE) +  # hide Batch legend
+  stat_ellipse(aes(linetype = Platform), type = "norm", level = 0.95, color = "black", size = 0.8) +
+  geom_text(data = label_df, aes(label = Batch), color = "black", size = 4) +
+  theme_minimal() +
+  labs(
+    title = "PCA: Affymetrix (Before Correction)",
+    x = paste0("PC1 (", percent_var[1], "%)"),
+    y = paste0("PC2 (", percent_var[2], "%)"),
+    linetype = "Platform"
+  ) +
+  theme(
+    legend.title = element_text(size = 10),
+    legend.text = element_text(size = 9)
+  )
+
+
+umap_before_df$Platform <- ifelse(umap_before_df$Batch %in% c("GSE14814", "GSE68465"), "GPL96", "GPL570")
+
+# Calculate cluster label positions (center of each dataset)
+label_df <- umap_before_df %>%
+  group_by(Batch) %>%
+  summarize(UMAP1 = median(UMAP1), UMAP2 = median(UMAP2), .groups = "drop")
+
+# Plot
+ggplot(umap_before_df, aes(x = UMAP1, y = UMAP2)) +
+  geom_point(aes(color = Batch), alpha = 0.8, size = 2, show.legend = FALSE) +
+  stat_ellipse(aes(linetype = Platform), type = "norm", level = 0.95, color = "black", size = 0.8) +
+  geom_text(data = label_df, aes(label = Batch), color = "black", size = 4) +
+  theme_minimal() +
+  labs(
+    title = "UMAP: Before ComBat",
+    x = "UMAP 1",
+    y = "UMAP 2",
+    linetype = "Platform"
+  ) +
+  theme(
+    legend.title = element_text(size = 10),
+    legend.text = element_text(size = 9)
+  )
+```
+
+#mas5calls
+```{r}
+library(affy)
+
+gpl570_gses <- c("GSE157010", "GSE29013", "GSE31210", "GSE37745", "GSE50081")
+gpl96_gses  <- c("GSE14814", "GSE68465")
+
+base_dir <- "~/GitHub/nsclc-adj-chemo"
+
+process_mas5 <- function(gse_list, base_dir) {
+  call_matrices <- list()
+  
+  for (gse in gse_list) {
+    cat("Processing", gse, "\n")
+    cel_path <- file.path(base_dir, gse, "CEL")
+    
+    try({
+      gse_affy <- ReadAffy(celfile.path = cel_path)
+      gse_calls <- mas5calls(gse_affy)
+      gse_matrix <- exprs(gse_calls)
+      
+      call_matrices[[gse]] <- gse_matrix
+    }, silent = FALSE)
+  }
+  
+  return(list(call_matrices = call_matrices))
+}
+
+gpl570_results <- process_mas5(gpl570_gses, base_dir)
+gpl96_results  <- process_mas5(gpl96_gses,  base_dir)
+
+#GSE31908
+celfiles_all <- list.files("GSE31908/CEL", pattern = ".CEL.gz", full.names = TRUE)
+
+gpl570_celfiles <- celfiles_all[1:17]
+
+gse31908_affy <- ReadAffy(filenames = gpl570_celfiles)
+
+gse31908_calls <- mas5calls(gse31908_affy)
+gse31908_matrix <- exprs(gse31908_calls)
+
+gpl570_results$call_matrices[["GSE31908"]] <- gse31908_matrix
+
+compute_percent_p_m <- function(call_matrix) {
+  if (!is.matrix(call_matrix)) return(NULL)
+
+  percent_p <- colMeans(call_matrix == "P") * 100
+  percent_m <- colMeans(call_matrix == "M") * 100
+
+  # Combine into a data frame
+  df <- data.frame(
+    Sample = colnames(call_matrix),
+    Percent_P = percent_p,
+    Percent_M = percent_m,
+    Percent_PM = percent_p + percent_m
+  )
+  return(df)
+}
+
+gpl570_pm_list <- lapply(gpl570_results$call_matrices, compute_percent_p_m)
+gpl96_pm_list  <- lapply(gpl96_results$call_matrices,  compute_percent_p_m)
+
+
+```
+
+```{r}
+library(ggplot2)
+
+gpl570_df <- do.call(rbind, Map(function(df, name) {
+  if (!is.null(df)) {
+    df$Dataset <- name
+    df$Platform <- "GPL570"
+    return(df)
+  }
+}, gpl570_pm_list, names(gpl570_pm_list)))
+
+gpl96_df <- do.call(rbind, Map(function(df, name) {
+  if (!is.null(df)) {
+    df$Dataset <- name
+    df$Platform <- "GPL96"
+    return(df)
+  }
+}, gpl96_pm_list, names(gpl96_pm_list)))
+
+combined_pm_df <- rbind(gpl570_df, gpl96_df)
+
+ggplot(combined_pm_df, aes(x = Percent_PM, fill = Platform)) +
+  geom_histogram(
+    position = "identity",
+    bins = 30,
+    alpha = 0.7,
+    color = "black"
+  ) +
+  scale_fill_manual(values = c("GPL570" = "gray40", "GPL96" = "white")) +
+  geom_vline(xintercept = 90, linetype = "dashed", color = "red") +
+  labs(
+    title = "Present + Marginal Call Rate per Array",
+    x = "% Present + Marginal Calls",
+    y = "Number of Arrays",
+    fill = "Platform"
+  ) +
+  theme_minimal()
+```
 
